[package]
name = "pullreqr_ssh_info"
version = "0.1.0"
authors = ["matt rice <ratmice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simplelog = "0.8"
serde = {version = "1.0.117", features=["derive"]}
serde_json = "1.0.59"
thiserror = "1.0.22"
dirs-next = "2.0.0"
whoami = "0.9.0"
